--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
   <div>
     <h4>What about food?</h4>
-    <p>Although I enjoy eating a wide variety of different foods (like most people do), I tend to think of food primarily as fuel. I try to eat what is healthy for me, making sure I get everything my body needs while refraining from unhealthy foods that only provide very short term pleasure. Here's a table consisting of the foods I eat regularly, what I enjoy, and my absolute favorites.</p>
+    <p>Although I enjoy eating a wide variety of different foods (like most people do!), I tend to think of food primarily as fuel. I try to eat what is healthy for me, making sure I get everything my body needs while refraining from unhealthy foods that only provide very short term pleasure. Here's a table consisting of the foods I eat regularly, what I enjoy, and my absolute favorites.</p>
   </div>
   <div>
     <table border="2"> 
