--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         </td>   
         <td> 
           <ul class="table-list">
-            <li>Salad</li>
             <li>Spinach</li>
-            <li>Chicken</li>
+            <li>Kalle</li>
+            <li>Grilled Chicken</li>
           </ul>
         </td>
         <td> 
